Helpers/FileManagement/FileService/fileservice-k8s/fileservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fileservice
  namespace: onaimhub
spec:
  ports:
    - name: "5007"
      port: 5007
      targetPort: 8080
  selector:
    app: fileservice
  type: ClusterIP
